[gd_scene load_steps=5 format=3 uid="uid://c5h8ark7idoiw"]

[ext_resource type="PackedScene" uid="uid://bul5gv3clgadi" path="res://scenes/animation/GariDog.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://buqie3idub0xs" path="res://scenes/item/Lixeira.tscn" id="2"]
[ext_resource type="Script" uid="uid://lnrc4kdfgcvs" path="res://scenes/player/Gatorobo/Gatorobo.gd" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(70.0814, 75.0388)

[node name="Gatorobo" type="CharacterBody2D"]
script = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
scale = Vector2(0.9, 0.5)
shape = SubResource("1")

[node name="Lixeira" parent="." instance=ExtResource("2")]
position = Vector2(-3, -27)

[node name="GatoroboBody" type="Node2D" parent="."]

[node name="GariDog" parent="GatoroboBody" instance=ExtResource("1")]

[connection signal="changed_item" from="Lixeira" to="." method="_on_Lixeira_changed_item"]
